# inforadar

./: Makefile  README.md  config.yml  config.yml.example  inforadar.db  pyproject.toml  verify_debug.py
alembic/: env.py
alembic/versions/: dc80ed259b9b_initial_migration.py
database/: alembic.ini
database/migrations/: env.py
database/migrations/versions/: 145a7f4bca9e_rename_initial_fetch_date_to_fetch_.py  38b66a625947_.py  509f103fb205_update_habr_hubs_type.py  7dfb6aeaefe4_update_setting_types.py  b595316ec9cb_create_list_and_custom_setting_tables.py  dc80ed259b9b_initial_migration.py
design/: prompts.txt
docs/: 01_requirements.md  02_mvp_plan.md  architecture.md  deploy.md  design.md  fetch.md  reqs.md  requirements.md  ui.md
docs/features/: command.md  fetch.md  filter.md
docs/tech/: arch.md
src/inforadar/: config.py  core.py  main.py  models.py  storage.py  tui.py
src/inforadar/providers/: habr.py
src/inforadar/sources/: habr.py
src/inforadar/tui/: app.py  command_line.py  input.py  keys.py  schemas.py
tests/: test_habr_provider.py  test_storage.py  test_tui_input_capital.py
tests/bdd/features/: data_collection.feature
tests/bdd/step_defs/: conftest.py  test_collection_steps.py
tests/fixtures/: habr_article.html  habr_hub_page.html  habr_rss.xml
tests/integration/: test_auto_update.py  test_core_logic.py  test_initial_fetch_date.py  test_provider.py  test_refresh.py  test_storage.py
tests/integration/fixtures/: habr_article.html  habr_hub_page.html
tests/unit/: test_tui_command_line.py  test_utils.py
(+27 files in other folders)
